# pd-ambi

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  ambi~-help.pd
.github/workflows/: c-cpp.yml
Resources/: ambi~-help.pd
Sources/: ambi~.cpp
